--- a/Exercise-3-problem-1.ipynb
+++ b/Exercise-3-problem-1.ipynb
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -78,13 +78,12 @@
    },
    "outputs": [],
    "source": [
-    "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "basename = 'station'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -100,7 +99,15 @@
     },
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "station\n"
+     ]
+    }
+   ],
    "source": [
     "# Test print of the variable\n",
     "print(basename)"
@@ -129,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -144,13 +151,12 @@
    },
    "outputs": [],
    "source": [
-    "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "filenames = []"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -165,7 +171,15 @@
      "solution": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[]\n"
+     ]
+    }
+   ],
    "source": [
     "# Test print of the variable\n",
     "print(filenames)"
@@ -205,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -221,13 +235,16 @@
    },
    "outputs": [],
    "source": [
-    "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "for value in range(21):\n",
+    "    station = f'{basename}_{value}.txt'\n",
+    "    filenames.append(station)\n",
+    "# create a list from 0-20\n",
+    "# append the list"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -242,7 +259,15 @@
      "solution": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['station_0.txt', 'station_1.txt', 'station_2.txt', 'station_3.txt', 'station_4.txt', 'station_5.txt', 'station_6.txt', 'station_7.txt', 'station_8.txt', 'station_9.txt', 'station_10.txt', 'station_11.txt', 'station_12.txt', 'station_13.txt', 'station_14.txt', 'station_15.txt', 'station_16.txt', 'station_17.txt', 'station_18.txt', 'station_19.txt', 'station_20.txt']\n"
+     ]
+    }
+   ],
    "source": [
     "# Test print of the results\n",
     "print(filenames)"
@@ -250,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -274,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -339,7 +364,8 @@
     }
    },
    "source": [
-    "YOUR ANSWER HERE"
+    "1. Yes, it is clear.\n",
+    "2. Not yet, haha oki."
    ]
   },
   {
@@ -381,7 +407,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.5"
+   "version": "3.10.14"
   }
  },
  "nbformat": 4,
