--- a/Exercise-3-problem-2.ipynb
+++ b/Exercise-3-problem-2.ipynb
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -142,13 +142,15 @@
    },
    "outputs": [],
    "source": [
-    "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "cold = []\n",
+    "slippery = []\n",
+    "comfortable = []\n",
+    "warm = []"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -163,7 +165,15 @@
      "solution": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[] [] [] []\n"
+     ]
+    }
+   ],
    "source": [
     "# Test print for all lists (they should be empty at this point)\n",
     "print(cold, slippery, comfortable, warm)"
@@ -197,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -212,13 +222,22 @@
    },
    "outputs": [],
    "source": [
-    "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "for temp in temperatures:\n",
+    "    if temp < -2.0:\n",
+    "        cold.append(temp)\n",
+    "    elif temp >= -2 and temp < 2:\n",
+    "        slippery.append(temp)\n",
+    "    elif temp >= 2 and temp < 15:\n",
+    "        comfortable.append(temp)\n",
+    "    else:\n",
+    "        warm.append(temp)\n",
+    "\n",
+    "# create variable 'temp'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -233,7 +252,15 @@
      "solution": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[-5.4, -4.8, -4.4, -2.2, -3.9, -2.5, -4.6, -2.4, -3.3, -4.8, -2.8, -4.7, -5.6, -2.7, -4.6] [1.0, -1.3, 0.1, 1.9, 1.0, -0.8, -0.1, -0.4, -0.9, 1.6, 1.8, 1.6, 1.5, 1.4, 1.6, -0.0] [3.9, 4.0, 4.4, 5.1, 2.1, 2.6, 3.4, 3.1, 2.4, 4.2, 3.5, 2.6, 3.1, 2.2, 3.3, 4.7, 4.0, 3.6, 4.9, 4.8, 5.3, 5.6, 4.1, 3.7, 7.6, 6.9, 5.1, 6.4, 3.8, 4.0, 8.6, 4.1, 8.9, 3.0, 8.5, 4.7, 6.6, 8.1, 4.5, 4.8, 11.3, 4.7, 5.2, 11.5, 6.2, 2.9, 4.3, 2.8, 2.8, 6.3, 2.6, 7.3, 3.4, 4.7, 9.3, 6.4, 5.4, 7.6, 5.2] []\n"
+     ]
+    }
+   ],
    "source": [
     "# Test prints for all lists (now they should contain values)\n",
     "print(cold, slippery, comfortable, warm)\n"
@@ -264,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -280,15 +307,12 @@
    "outputs": [],
    "source": [
     "# Edit the variable to find correct answer\n",
-    "slippery_times = 'XXX'\n",
-    "\n",
-    "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "slippery_times = len(slippery)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -303,7 +327,15 @@
      "solution": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "In April 2013 it was slippery 16 times.\n"
+     ]
+    }
+   ],
    "source": [
     "# Print the answer\n",
     "print(f\"In April 2013 it was slippery {slippery_times} times.\")"
@@ -347,15 +379,12 @@
    "outputs": [],
    "source": [
     "# Edit the variable to find correct answer\n",
-    "warm_times = 'XXX'\n",
-    "\n",
-    "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "warm_times = len(warm)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -370,7 +399,15 @@
      "solution": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "In April 2013 it was warm 0 times.\n"
+     ]
+    }
+   ],
    "source": [
     "# Print the answer\n",
     "print(f\"In April 2013 it was warm {warm_times} times.\")"
@@ -397,7 +434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -413,15 +450,12 @@
    "outputs": [],
    "source": [
     "# Edit the variable to find correct answer\n",
-    "cold_times = 'XXX'\n",
-    "\n",
-    "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "cold_times = len(cold)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -436,7 +470,15 @@
      "solution": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "In April 2013 it was cold 15 times.\n"
+     ]
+    }
+   ],
    "source": [
     "# Print the answer\n",
     "print(f\"In April 2013 it was cold {cold_times} times.\")"
@@ -486,7 +528,8 @@
     }
    },
    "source": [
-    "YOUR ANSWER HERE"
+    "1. Yes.\n",
+    "2. Yes, on some."
    ]
   },
   {
@@ -528,7 +571,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.11"
+   "version": "3.10.14"
   }
  },
  "nbformat": 4,
